#1183 -- Fixes Pivot underline not visible in High Contrast mode

--- a/packages/office-ui-fabric-react/src/components/Pivot/Pivot.scss
+++ b/packages/office-ui-fabric-react/src/components/Pivot/Pivot.scss
@@ -93,6 +93,15 @@
     // Show the underline
     &::before {
       background-color: $ms-color-themePrimary;
+
+       @media screen and (-ms-high-contrast: active) {
+         background-color: transparent;
+         border-bottom: 2px solid $ms-color-white;
+         }
+      @media screen and (-ms-high-contrast: black-on-white) {
+        background-color: transparent;
+        border-bottom: 2px solid $ms-color-black;
+      }
     }
   }
 
@@ -180,6 +189,13 @@
       &::before {
         background-color: transparent;
         transition: none;
+
+        @media screen and (-ms-high-contrast: active) {
+          border-bottom: 2px solid $ms-color-white;
+        }
+        @media screen and (-ms-high-contrast: black-on-white) {
+          border-bottom: 2px solid $ms-color-black;
+        }
       }
     }
   }
